tests/language_modules/08_routines/invalid_semantics/unknown_parameter_type.vf
module UnknownParameterType

function read(item: MissingType) returns Integer
is
    return 1
end read

end UnknownParameterType